Fred Emmott, 20041229
	- Fixed automoc problems
	- Finished port forwarding