@@ -1,3 +1,4 @@
 Fred Emmott, 20041229
 	- Fixed automoc problems
 	- Finished port forwarding
+	- Can now match hosts
